--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,11 @@
       "src": "/(.*)",
       "dest": "/wwwroot/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  }
 } 
